--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.0",
     "rimraf": "5.0.5",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
